@@ -45,6 +45,14 @@
         provides="Products.GenericSetup.interfaces.EXTENSION"
         for="Products.CMFPlone.interfaces.IPloneSiteRoot" />
 
+  <genericsetup:registerProfile
+        name="upgrade117"
+        title="EEA Geotags upgrade profile for v11.7"
+        directory="profiles/upgrades/to_117"
+        description='EEA Geotags upgrade profile for v11.7'
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        for="Products.CMFPlone.interfaces.IPloneSiteRoot" />
+
   <genericsetup:importStep
         name="eea-geotags-various"
         title="EEA Geotags Various"
