@@ -122,6 +122,19 @@
 
   </genericsetup:upgradeSteps>
 
+  <genericsetup:upgradeSteps
+    source="11.2"
+    destination="11.7"
+    profile="eea.geotags:default">
+
+    <genericsetup:upgradeDepends
+        title="Import all steps from eea.geotags profile upgrade 11.7"
+        description="Added new country groups"
+        import_profile="eea.geotags:upgrade117"
+    />
+
+  </genericsetup:upgradeSteps>
+
 
   <browser:page
     for="eea.geotags.interfaces.IGeoTaggable"
